--- a/index.html
+++ b/index.html
@@ -3,17 +3,177 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>index</title>
+  <title>Melody Tune</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
   crossorigin="anonymous">
+
+  <!--Materialize cdn-->
+  <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <!--end Materialize cdn-->
 </head>
 <body>
+  <div id="app">
+    {{message}}
+    <!--Navbar-->
+      <nav>
+          <div class="nav-wrapper blue-grey darken-4">
+            <a href="#" class="brand-logo center">Logo</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li><a href="#modal1" class="waves-effect waves-light modal-trigger amber accent-3 tooltipped" data-position="bottom" data-tooltip="Login here!">Login</a></li>
+              <li><a href="badges.html" class="waves-effect waves-light amber accent-3">Logout</a></li>
+            </ul>
+          </div>
+        </nav>
+    <!--end Navbar-->
 
+    <!--Home-->
+   
+
+      <!-- Modal Login -->
+      <div id="modal1" class="modal modal-fixed-footer">
+        <div class="modal-content">
+            <div class="row">
+                <form class="col s12 m12 l12">
+                  <h3>Login</h3>
+                  <div class="row">
+                    <div class="input-field col m12 l12">
+                      <i class="material-icons prefix">mail</i>
+                      <input id="icon_prefix" type="text" class="validate">
+                      <label for="icon_prefix">Email</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12 m12 l12">
+                      <i class="material-icons prefix">lock</i>
+                      <input id="icon_telephone" type="tel" class="validate">
+                      <label for="icon_telephone">Password</label>
+                    </div>
+                  </div>
+                </form>
+              </div>
+        </div>
+        <div class="modal-footer blue-grey darken-4">
+          <a href="#!" class="modal-close waves-effect waves-green blue-grey lighten-1 btn">Login</a>
+        </div>
+      </div>
+      <!--end Modal Login-->
+
+    <!--content-->
+ 
+
+      <div class="row">
+        <!--Form upload music-->
+        <div class="col s12 m6 l6">
+          <div class="row">
+              <div class="row">
+                  <div class="col s12 m6 l6">
+                    <div class="card blue-grey darken-1">
+                      <div class="card-content white-text">
+                          <span class="card-title">Upload Music</span>
+                          <form class="col s6 m6 l6">
+                              <div class="row">
+                                <div class="input-field col s12 m6 l6">
+                                  <input type="text" class="validate">
+                                  <label for="artist">Artist</label>
+                                </div>
+                              </div>
+                              <div class="row">
+                                  <div class="input-field col s12 m6 l6">
+                                    <input type="text" class="validate">
+                                    <label for="title">Title</label>
+                                  </div>
+                              </div>
+                          <div class="row">
+                            <form action="#">
+                                <div class="file-field input-field">
+                                  <div class="btn">
+                                    <span>File</span>
+                                    <input type="file">
+                                  </div>
+                                  <div class="file-path-wrapper">
+                                    <input class="file-path validate" type="text">
+                                  </div>
+                                </div>
+                              </form>
+                              </div>
+                            </form>
+                          </div>
+                        <div class="row">
+                          <div class="col s12 m12 l12 center">
+                              <a href="#!" class="modal-close waves-effect waves-green blue-grey lighten-1 btn center">UPLOAD</a>
+                            <div class="preloader-wrapper big active">
+                                <div class="spinner-layer spinner-red-only">
+                                  <div class="circle-clipper left">
+                                    <div class="circle"></div>
+                                  </div><div class="gap-patch">
+                                    <div class="circle"></div>
+                                  </div><div class="circle-clipper right">
+                                    <div class="circle"></div>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                <!--end form upload music-->
+              
+                <!--Get song here-->
+                <div class="col s12 m12 l12">
+                    <div class="row center">
+                        <div class="card blue-grey darken-1" style="margin-left:10px;">
+                            <div class="card-content white-text">
+                              <span class="card-title">Uploaded Music</span>
+                              <p>Artist</p>
+                              <p>Title</p>
+                              <audio controls>
+                                <source src="" type="audio/mpeg">
+                              </audio>
+                            </div>
+                            <div class="card-action">
+                              <a href="#">Get Lyrics<i class="material-icons prefix">music_note</i></a>
+                              <a href="#">Share<i class="material-icons prefix">share</i></a>
+                            </div>
+                          </div>
+                    </div>
+                    <!--Get Lyrics here-->
+                    <div class="col s12 m12 l12">
+                        <div class="row">
+                            <div class="card blue-grey darken-1" style="margin-left:10px;">
+                                <div class="card-content white-text">
+                                  <span class="card-title">Song Title</span>
+                                  <p>By: Artist</p>
+                                  <p>Lyrics here.. Lalalalalalalalalalalallaalllalalalalalalalalalalalalalalalalalalalalalaalalalalalalal</p>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                    <!--end get lyrics-->
+                    </div>
+        </div>
+    </div>
+      <!--end content-->
+
+  </div>
+</div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/main.js"></script>
+  <script>
+  $(document).ready(function(){
+      $('.modal').modal();
+      $('.tooltipped').tooltip();
+      $('.parallax').parallax();
+    });
+  </script>
 </body>
 </html>
