--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Melody Tune</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+
   <!--Materialize cdn-->
-  <script src="https://code.jquery.com/jquery-3.3.1.js"integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!--end Materialize cdn-->
 </head>
+
 <body>
   <div id="fb-root">
     <script>(function (d, s, id) {
@@ -27,7 +34,7 @@
     </script>
   </div>
   <div id="app">
-    {{message}}
+  
     <!--Navbar-->
     <nav>
       <div class="nav-wrapper blue-grey darken-4">
@@ -127,17 +134,7 @@
               </div>
             </div>
             <!--Get Lyrics here-->
-            <div class="col s12 m12 l12">
-              <div class="row">
-                <div class="card blue-grey darken-1" style="margin-left:10px;">
-                  <div class="card-content white-text">
-                    <span class="card-title">Song Title</span>
-                    <p>By: Artist</p>
-                    <p>Lyrics here.. Lalalalalalalalalalalallaalllalalalalalalalalalalalalalalalalalalalalalaalalalalalalal</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <get-lyric @get-lyrics = "getLyric"></get-lyric>
             <!--end get lyrics-->
           </div>
         </div>
@@ -151,6 +148,7 @@
   <script src="components/share.js"></script>
   <script src="components/login.js"></script>
   <script src="components/register.js"></script>
+  <script src="js/lyric.js"></script>
   <script src="js/main.js"></script>
   <script>
   $(document).ready(function(){
@@ -160,4 +158,5 @@
   });
   </script>
 </body>
+
 </html>
