music url added

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 <div class="card-action">
                   <a href="#">Get Lyrics<i class="material-icons prefix">music_note</i></a>
-                  <share></share>
+                  <share :music="music"></share>
                 </div>
               </div>
             </div>
