--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <!--end get song-->
 
             <!--Get Lyrics here-->
-            <get-lyric @get-lyrics = "getLyric"></get-lyric>
+            <get-lyric @get-lyrics = "getLyric" :thislyric="lyric" :thisartist = "artist" :thistitle = "title"></get-lyric>
             <!--end get lyrics-->
           </div>
         </div>
